Fixed layout issues on mobile for the scramble text animation in hero

--- a/css/style.css
+++ b/css/style.css
@@ -57,17 +57,31 @@ main {
 .bold {
     font-weight: 700;
     font-size: clamp(1.75rem, 5vw, 3rem);
-    position: relative;
+    white-space: nowrap;
 
 }
 
-.title-div {
-    width: 100%;
+/* 
+ Some symbols would break onto more than one line on desktop causing the layout to shift
+ The fix was to use white space property which prevents the text from wrapping onto next line
+ which throws off the hero layout
+ */
+.limit-symbols {
+    max-width: 100%;
+
     overflow: hidden;
-    text-overflow: ellipsis;
+
+
+
 }
 
 
+#limit-title {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    word-wrap: break-word;
+}
 
 .title {
     font-weight: 400;
@@ -1020,6 +1034,12 @@ a {
 
     .inspiration {
         width: 50%;
+    }
+
+    .limit-symbols {
+        max-width: 100%;
+        overflow: hidden;
+        white-space: nowrap;
     }
 
 
